...
                                setShowConfirmDialog(false)
                                if (pendingModeChange) {
                                    applyModeChange(pendingModeChange)
                                }
                            }}
                        >
                            Continue
                        </Button>
                    </View>
                </View>
            )}
        </View>
    )
...
